# odin-common-utils

./: .directory  .gitignore  NOTES.txt  README.md
tutorials/: overview.odin
utils/logging_util/: README.md  build_all_examples_on_unix.sh  build_all_examples_on_windows.bat  log.txt  readme_example_log.txt
utils/logging_util/backup_build/: readme_example
utils/logging_util/examples/: example.json  full_example.odin  odin_log.txt  readme_example.odin  test_all_features.odin  test_odin_log  test_odin_log.odin
utils/logging_util/log/: full_example_log.txt  log.txt  readme_example_log.txt
utils/logging_util/src/: logging_util.odin  memory_usage_windows.odin  readme_example.odin  src
utils/logging_util/src/c/: CMakeLists.txt  c_bindings.c  c_bindings.h  current_time_info.c
utils/logging_util/src/logging_util/: current_time_formatted.c  logging_util.odin  memory_usage_darwin.odin  memory_usage_linux.odin
utils/logging_util/src/odin/: logging_util.odin  logging_util_linux.odin  logging_util_windows.odin  memory_usage_windows.odin
